test/codegen-errors.si
// RUN: ! silc %s --split-input-file 2>&1 | FileCheck %s

mod UnassignedIdent {
    // CHECK: error: binding `a` has not been assigned
    let a: uint<32>;
}

// -----

mod BadAssignLHS {
    // CHECK: error: expression `1u32` cannot appear on left-hand side of `=`
    1u32 = 2u32;
}

// -----

// CHECK: info: name `UnassignableLHS` defined here
mod UnassignableLHS {
    // CHECK: error: expression `UnassignableLHS` cannot be assigned
    UnassignableLHS = 2u32;
}
